--- a/job/templates/job_list.html
+++ b/job/templates/job_list.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-xl-12">
         <div class="bradcam_text">
-          <h3>4536+ Jobs Available</h3>
+          <h3>Jobs Available</h3>
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
                     <!-- <img src="{{job.image.url}}" alt="job.image" /> -->
                   </div>
                   <div class="jobs_conetent">
-                    <a href="/jobs/{{job.id}}">
+                    <a href="/jobs/{{job.slug}}">
                       <h4>{{job}}</h4>
                     </a>
                     <div class="links_locat d-flex align-items-center">
