--- a/job/templates/job_list.html
+++ b/job/templates/job_list.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-xl-12">
         <div class="bradcam_text">
-          <h3>Jobs Available</h3>
+          <h3>{{jobs.count}} + Jobs Available</h3>
         </div>
       </div>
     </div>
@@ -156,7 +156,19 @@
                     <a class="heart_mark" href="#">
                       <i class="fa fa-heart"></i>
                     </a>
-                    <a href="job_details.html" class="boxed-btn3">Apply Now</a>
+                    <a href="/jobs/{{job.slug}}" class="boxed-btn3">Apply Now</a>
+                  </div>
+                  <div class="apply_now">
+                    <a class="heart_mark" href="#">
+                      <i class="fa fa-heart"></i>
+                    </a>
+                    <a href="/jobs/{{job.slug}}/edit" class="boxed-btn3">Edi job</a>
+                  </div>
+                  <div class="apply_now">
+                    <a class="heart_mark" href="#">
+                      <i class="fa fa-heart"></i>
+                    </a>
+                    <a href="/jobs/{{job.slug}}/del" class="boxed-btn3">delete job</a>
                   </div>
                   <div class="date">
                     <p>Date line: {{job.published_at | date:'d b Y'}}</p>
