--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                                 <div class="main-menu d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="/jobs">home</a></li>
                                             <li><a href="jobs.html">Browse Job</a></li>
                                             <li>
                                                 <a href="#">pages <i class="ti-angle-down"></i></a>
@@ -85,7 +85,7 @@
                                         <a href="#">Log in</a>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="#">Post a Job</a>
+                                        <a class="boxed-btn3" href="/post_job">Post a Job</a>
                                     </div>
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </header> 
+    </header>
     <!-- header-end -->
     {% block body %}
     {% endblock body %}
