--- a/job/templates/job_list.html
+++ b/job/templates/job_list.html
@@ -162,7 +162,7 @@
                     <a class="heart_mark" href="#">
                       <i class="fa fa-heart"></i>
                     </a>
-                    <a href="/jobs/{{job.slug}}/edit" class="boxed-btn3">Edi job</a>
+                    <a href="/jobs/{{job.slug}}/edit" class="boxed-btn3">Edit job</a>
                   </div>
                   <div class="apply_now">
                     <a class="heart_mark" href="#">
