--- a/job/templates/Edit_job.html
+++ b/job/templates/Edit_job.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 {% block body %}
 <!-- bradcam_area  -->
 <div class="bradcam_area bradcam_bg_1">
@@ -13,11 +14,15 @@
     </div>
 </div>
 <!--/ bradcam_area  -->
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{edit}}
+<div class="container">
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% bootstrap_form edit %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">Update</button>
+        {% endbuttons %}
 
-    <input type="submit" value="update Job">
+    </form>
+</div>
 
-</form>
 {% endblock body %}
