--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                                 <div class="main-menu d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="/jobs">home</a></li>
+                                            <li><a href="/job/jobs">home</a></li>
                                             <li><a href="jobs.html">Browse Job</a></li>
                                             <li>
                                                 <a href="#">pages <i class="ti-angle-down"></i></a>
