create canidates vewis

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,13 +57,13 @@
                                 <div class="main-menu d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="/job/jobs">home</a></li>
-                                            <li><a href="jobs.html">Browse Job</a></li>
+                                            <li><a href="/jobs">home</a></li>
+                                            <li><a href="/jobs">Browse Job</a></li>
                                             <li>
                                                 <a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                    <li><a href="candidate.html">Candidates </a></li>
-                                                    <li><a href="job_details.html">job details </a></li>
+                                                    <li><a href="/jobs/candidates">Candidates </a></li>
+
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
@@ -85,7 +85,7 @@
                                         <a href="#">Log in</a>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="/post_job">Post a Job</a>
+                                        <a class="boxed-btn3" href="/jobs/add">Post a Job</a>
                                     </div>
                                 </div>
                             </div>
