creat applly form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3375,7 +3375,7 @@ h3 {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  color: #00D363;
+  color: #23858d;
   font-size: 14px;
   line-height: 40px;
   text-align: center;
