--- a/board/templates/board/job_detail.html
+++ b/board/templates/board/job_detail.html
@@ -39,11 +39,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="jobs_right">
-                                <div class="apply_now">
-                                    <a class="heart_mark" href="#"> <i class="ti-heart"></i> </a>
-                                </div>
-                            </div> -->
+
                     </div>
                 </div>
                 <div class="descript_wrap white-bg">
@@ -150,37 +146,13 @@
                         <li><a href="#"> <i class="fa fa-twitter"></i></a> </li>
                         <li><a href="#"> <i class="fa fa-envelope"></i></a> </li>
                     </ul>
+
                 </div>
-                <!-- <div class="job_location_wrap">
-                    <div class="job_lok_inner">
-                        <div id="map" style="height: 200px;"></div>
-                        <script>
-                            function initMap() {
-                                var uluru = { lat: -25.363, lng: 131.044 };
-                                var grayStyles = [
-                                    {
-                                        featureType: "all",
-                                        stylers: [
-                                            { saturation: -90 },
-                                            { lightness: 50 }
-                                        ]
-                                    },
-                                    { elementType: 'labels.text.fill', stylers: [{ color: '#ccdee9' }] }
-                                ];
-                                var map = new google.maps.Map(document.getElementById('map'), {
-                                    center: { lat: -31.197, lng: 150.744 },
-                                    zoom: 9,
-                                    styles: grayStyles,
-                                    scrollwheel: false
-                                });
-                            }
-
-                        </script>
-                        <script
-                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap"></script>
-
-                    </div>
-                </div> -->
+                <div>
+                    <button type="submit" class="btn btn-primary"><a href="{% url 'board:job_update' job.slug %}" >update</a></button>
+                    <button type="submit" class="btn btn-danger"><a href="{% url 'board:job_delete' job.slug %}" >remove</a></button>
+                </div>
+                
             </div>
         </div>
     </div>
