--- a/board/templates/board/job_update.html
+++ b/board/templates/board/job_update.html
@@ -17,60 +17,18 @@
 </div>
 <!--/ bradcam_area  -->
 
-<!-- <div class="apply_job_form white-bg">
-        <h4>update  the job</h4>
-        <form method="POST" enctype="multipart/form-data">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="input_field">
-                        <input type="text" placeholder="job name" name="name">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="input_field">
-                        <input type="text" placeholder="Email">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="input_field">
-                        <input type="text" placeholder="Website/Portfolio link">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                          <button type="button" id="inputGroupFileAddon03"><i class="fa fa-cloud-upload" aria-hidden="true"></i>
-                          </button>
-                        </div>
-                        <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03">
-                          <label class="custom-file-label" for="inputGroupFile03">Upload CV</label>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="input_field">
-                        <textarea name="#" id="" cols="30" rows="10" placeholder="Coverletter"></textarea>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="submit_btn">
-                        <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div> -->
 
-<div class="container"   >
+
+<div class="container">
     <form method="POST" enctype="multipart/form-data" class="apply_job_form white-bg">
         <h3>job details</h3>
         {% csrf_token%}
         {% bootstrap_form form %}
         {% buttons %}
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Update</button>
         {% endbuttons %}
     </form>
 </div>
+
 
 {% endblock content %}
