--- a/board/templates/board/job_list.html
+++ b/board/templates/board/job_list.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h3>{{jobs|length}}</h3>
+                    <h3>{{count}}</h3>
                 </div>
             </div>
         </div>
@@ -161,13 +161,34 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="pagination_wrap">
+                            <div >
                                 <ul>
-                                    <li><a href="#"> <i class="ti-angle-left"></i> </a></li>
-                                    <li><a href="#"><span>01</span></a></li>
-                                    <li><a href="#"><span>02</span></a></li>
-                                    <li><a href="#"> <i class="ti-angle-right"></i> </a></li>
+                                    {% if jobs.has_other_pages %}
+                                    <ul class="pagination justify-content-center mb-4">
+                                        {% if jobs.has_previous %}
+                                        <li class="page-item"><a class="page-link"
+                                                href="?page={{ jobs.previous_page_number }}">&laquo;</a></li>
+                                        {% else %}
+                                        <li class="disabled page-item"><span class="page-link">&laquo;</span></li>
+                                        {% endif %}
+                                        {% for i in jobs.paginator.page_range %}
+                                        {% if jobs.number == i %}
+                                        <li class="active page-item"><span class="page-link">{{ i }} <span
+                                                    class="sr-only page-item">(current)</span></span></li>
+                                        {% else %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                        {% endif %}
+                                        {% endfor %}
+                                        {% if jobs.has_next %}
+                                        <li class="page-item"><a class="page-link"
+                                                href="?page={{ jobs.next_page_number }}">&raquo;</a></li>
+                                        {% else %}
+                                        <li class="disabled page-item"><span class="page-link">&raquo;</span></li>
+                                        {% endif %}
+                                    </ul>
+                                    {% endif %}
                                 </ul>
+
                             </div>
                         </div>
                     </div>
