--- a/templates/base.html
+++ b/templates/base.html
@@ -27,23 +27,10 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="jobs.html">Browse Job</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="candidate.html"> Candidates </a></li>
-                                                    <li><a href="job_details.html">job details </a></li>
-                                                    <li><a href="elements.html"> elements </a></li>
-                                                    <li><a href="elements.html"> elements </a></li>
-                                                    <li><a href="elements.html"> elements </a></li>
-                                                    <li><a href="elements.html"> elements </a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="{% url 'board:job_list' %}">Browse Jobs</a></li>
+                                            <li><a href="jobs.html">Employers</a></li>
+                                            <li><a href="jobs.html">Blogs</a></li>
+                                            <li><a href="jobs.html">Candidates</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
