create accounts app & accuonts templates

--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,5 +1,30 @@
-{% extends "base_generic.html" %}
+
+
+
+{% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
-{% endblock %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h4>Password Reset Done </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
+
+<div class="container">
+  <br><br>
+  <h3 class="text-info">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</h3>
+  <br><br>
+  <!-- <button class='btn btn-primary btn-lg btn-block' > <a href="{% url 'login'%}">Click here to login again.</a></button> -->
+</div>
+
+{% endblock content %}
