--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,32 +1,28 @@
-{% extends "accounts_base.html" %}
+{% extends 'base.html' %}
+{% load bootstrap4 %}
 
-{% block body %}
-                <div class="row justify-content-center">
-                    <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
-                        <div class="user-form-logo">
-                            <a href="index.html"><img src="{{company.logo.url}}" alt="logo"></a>
-                        </div>
-                        <div class="user-form-card">
-                            <div class="user-form-title">
-                                <h2>worried?</h2>
-                                <p>No Problem! Just Follow The Simple Way</p>
-                            </div>
-                            <form class="user-form" method="post">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" placeholder="Enter your email">
-                                </div>
-                                <div class="form-button">
-                                    <button type="submit">get reset link</button>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="user-form-remind">
-                            <p>Go Back To<a href="{% url 'login' %}">login here</a></p>
-                        </div>
-                        <div class="user-form-footer">
-                            <p>Greeny | &COPY; Copyright by <a href="#">{{company.name}}</a></p>
-                        </div>
-                    </div>
+{% block content %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h4>Password Reset </h4>
                 </div>
-{% endblock %}
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
+
+<div class="container">
+    <form action="" method="post">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+          <input type="submit" class="btn btn-primary btn-lg btn-block" value="Reset password">
+        </form>
+</div>
+
+{% endblock content %}
