--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,57 +1,46 @@
-{% extends "accounts_base.html" %}
+{% extends 'base.html' %}
+{% load bootstrap4 %}
 
-{% block body %}
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-                <div class="row justify-content-center">
-                    <div class="col-12 col-sm-10 col-md-12 col-lg-12 col-xl-10">
-                        <div class="user-form-logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
-                        </div>
-                        <div class="user-form-card">
-                            <div class="user-form-title">
-                                <h2>welcome!</h2>
-                                <p>Use your credentials to access</p>
-                            </div>
-                            <div class="user-form-group">
-                                <ul class="user-form-social">
-                                    <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i>login with facebook</a></li>
-                                    <li><a href="#" class="twitter"><i class="fab fa-twitter"></i>login with twitter</a></li>
-                                    <li><a href="#" class="google"><i class="fab fa-google"></i>login with google</a></li>
-                                    <li><a href="#" class="instagram"><i class="fab fa-instagram"></i>login with instagram</a></li>
-                                </ul>
-                                <div class="user-form-divider">
-                                    <p>or</p>
-                                </div>
-                                <form class="user-form" method="post" action="{% url 'login' %}">
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Enter your email">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Enter your password">
-                                    </div>
-                                    <div class="form-check mb-3">
-                                        <input class="form-check-input" type="checkbox" value="" id="check">
-                                        <label class="form-check-label" for="check">Remember Me</label>
-                                    </div>
-                                    <div class="form-button">
-                                        <button type="submit">login</button>
-                                        <p>Forgot your password?<a href="{% url 'password_reset' %}">reset here</a></p>
-                                    </div>
-                                    <input type="hidden" name="next" value="{{ next }}">
-                                </form>
-                            </div>
-                        </div>
-                        <div class="user-form-remind">
-                            <p>Don't have any account?<a href="register.html">register here</a></p>
-                        </div>
-                        <div class="user-form-footer">
-                            <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
-                        </div>
-                    </div>
+{% block content %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h4>User Login</h4>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
 
+<div class="container">
+    {% if form.errors %}
+    <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
 
-{% endblock %}
+    {% if next %}
+    {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %}
+    {% endif %}
+
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <input type="submit" value="login" class="btn btn-primary btn-lg btn-block">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <button class="btn btn-secondary btn-lg"><a href="{% url 'password_reset' %}">Lost password?</a></button>
+
+</div>
+
+{% endblock content %}
