--- a/accounts/templates/registration/password_change_done.html
+++ b/accounts/templates/registration/password_change_done.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h4>User Logout</h4>
+                    <h4>Password change Done </h4>
                 </div>
             </div>
         </div>
@@ -18,9 +18,11 @@
 <!--/ bradcam_area  -->
 
 <div class="container">
-  <br><br>
-  <h2> You Are Logged out!</h2><br>
-  <button class='btn btn-primary btn-lg btn-block' > <a href="{% url 'login'%}">Click here to login again.</a></button>
+    <br><br>
+    <h3 class="text-info">We've emailed you instructions for setting your password. If they haven't arrived in a few
+        minutes, check your spam folder.</h3>
+    <br><br>
+    <!-- <button class='btn btn-primary btn-lg btn-block' > <a href="{% url 'login'%}">Click here to login again.</a></button> -->
 </div>
 
 {% endblock content %}
