--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -1,6 +1,26 @@
-{% extends "base_generic.html" %}
+{% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
-{% endblock %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="bradcam_text">
+          <h4>Password  change Complete </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--/ bradcam_area  -->
+
+<div class="container">
+  <br><br>
+  <h1 class="text-success">The password has been changed!</h1> <br><br>
+  <button class='btn btn-primary btn-lg btn-block'> <a href="{% url 'login'%}">Click here to login again.</a></button>
+</div>
+
+{% endblock content %}
