--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,14 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="#">Log in</a>
+                                        <a class="btn btn-success" href="{% url 'logout' %}">logout</a>
+                                        <a class="btn btn-success" href="{% url 'accounts:profile' %}">profile</a>
                                     </div>
-                                    <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="{% url 'board:job_create' %}">Post a Job</a>
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a class="btn btn-secondary" href="{% url 'login' %}">login</a>
+                                    </div>
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a class="btn btn-warning" href="{% url 'board:job_create' %}">Post a Job</a>
                                     </div>
                                 </div>
                             </div>
