--- a/accounts/templates/accounts/profile_edit.html
+++ b/accounts/templates/accounts/profile_edit.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h4>job_update</h4>
+                    <h3>Profile</h3>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
 
 <div class="container">
     <form method="POST" enctype="multipart/form-data" class="apply_job_form white-bg">
-        <h3>Profile details</h3>
+        <h1>Profile details</h1>
         {% csrf_token%}
         {% bootstrap_form user_Form %}
         {% bootstrap_form profile_form %}
