--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,8 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a class="btn btn-success" href="{% url 'logout' %}">logout</a>
-                                        <a class="btn btn-success" href="{% url 'accounts:profile' %}">profile</a>
+                                        <a class="btn btn-danger" href="{% url 'logout' %}">logout</a>
+                                        <a class="btn btn-success" href="{% url 'accounts:signup' %}">signup</a>
                                     </div>
                                     <div class="phone_num d-none d-xl-block">
                                         <a class="btn btn-secondary" href="{% url 'login' %}">login</a>
