add emailbackends for login by email & sendin gmail to reset password

--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -24,6 +24,7 @@
     <form action="" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
+    <input type="submit" class="btn btn-primary btn-lg btn-block" value="change password">
     </form>
 {% else %}
     <h1   class="text-warning">Password reset failed</h1>
