--- a/companies/templates/companies/employer_create.html
+++ b/companies/templates/companies/employer_create.html
@@ -1,5 +1,31 @@
-<form method="POST"  enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="create">
-</form>
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h4>Company Profile</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
+
+<div class="container"   >
+    <form method="POST" enctype="multipart/form-data" class="apply_job_form white-bg">
+        <h3>Company Info</h3>
+        {% csrf_token%}
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary"><a href="{% url 'board:job_create' %}">Save And PostJob</a></button>
+        {% endbuttons %}
+    </form>
+</div>
+
+{% endblock content %}
