--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                                         <a class="btn btn-secondary" href="{% url 'login' %}">login</a>
                                     </div>
                                     <div class="phone_num d-none d-xl-block">
-                                        <a class="btn btn-warning" href="{% url 'board:job_create' %}">Post a Job</a>
+                                        <a class="btn btn-warning" href="{% url 'companies:Employer_create' %}">Post a Job</a>
                                     </div>
                                 </div>
                             </div>
