--- a/companies/templates/companies/employer_create.html
+++ b/companies/templates/companies/employer_create.html
@@ -23,7 +23,7 @@
         {% csrf_token%}
         {% bootstrap_form form %}
         {% buttons %}
-        <button type="submit" class="btn btn-primary"><a href="{% url 'board:job_create' %}">Save And PostJob</a></button>
+        <button type="submit" class="btn btn-primary">Create</button>
         {% endbuttons %}
     </form>
 </div>
