--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -34,11 +34,14 @@
     <form method="post" >
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input type="submit" value="login" class="btn btn-primary btn-lg btn-block">
+        <!-- <input type="submit" value="login" class="btn btn-primary btn-lg btn-block"> -->
+        <button type="submit" class="btn btn-primary btn-lg btn-block"><a href="{% url 'password_reset' %}">login</a></button>
+
         <input type="hidden" name="next" value="{{ next }}">
     </form>
 
     {# Assumes you setup the password_reset view in your URLconf #}
+    <button class="btn btn-primary btn-lg"><a href="{% url 'accounts:signup' %}">SignUp</a></button>
     <button class="btn btn-secondary btn-lg"><a href="{% url 'password_reset' %}">Lost password?</a></button>
 
 </div>
