--- a/companies/templates/companies/employer_detail.html
+++ b/companies/templates/companies/employer_detail.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="jobs_right">
                             <div class="apply_now">
-                                <a href="{% url 'board:job_detail' job.slug %}" class="boxed-btn3">Apply Now</a>
+                                <a href="{% url 'board:job_detail' job.slug %}" class="boxed-btn3">Job Detail</a>
 
                             </div>
                             <div class="date">
